Use extended fab on wallet screen

--- a/customerapp/src/main/res/values/strings.xml
+++ b/customerapp/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
 
     <string name="biometric_prompt_title">Verify that it\'s you</string>
     <string name="biometric_prompt_message">We\'ll securely store your data so only you have access</string>
+
+    <string name="create_wallet">Create Wallet</string>
 </resources>
