--- a/customerapp/src/main/res/values/strings.xml
+++ b/customerapp/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="biometric_prompt_message">We\'ll securely store your data so only you have access</string>
 
     <string name="create_wallet">Create Wallet</string>
+    <string name="transactions">Transactions</string>
 </resources>
