--- a/customerapp/src/main/res/values/strings.xml
+++ b/customerapp/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="transactions">Transactions</string>
     <string name="transaction_received_description_template">Received %1$s</string>
     <string name="transaction_redeemed_description_template">Redeemed</string>
+    <string name="transactions_empty_message">No transactions yet</string>
+    <string name="tokens_empty_message">No tokens yet</string>
 </resources>
