--- a/customerapp/src/main/res/values/strings.xml
+++ b/customerapp/src/main/res/values/strings.xml
@@ -25,7 +25,12 @@
     <string name="create_wallet">Create Wallet</string>
     <string name="transactions">Transactions</string>
     <string name="transaction_received_description_template">Received %1$s</string>
-    <string name="transaction_redeemed_description_template">Redeemed</string>
+    <string name="transaction_redeemed_description_template">Redeemed %1$s</string>
     <string name="transactions_empty_message">No transactions yet</string>
     <string name="tokens_empty_message">No tokens yet</string>
+    <string name="transaction">Transaction Details</string>
+    <string name="error_loading_transaction">Error loading transaction</string>
+    <string name="transaction_details_title_merchant">Merchant</string>
+    <string name="transaction_details_title_signature">Signature</string>
+    <string name="transaction_details_title_date">Date</string>
 </resources>
