Add summary text atop transactions screen

--- a/customerapp/src/main/res/values/strings.xml
+++ b/customerapp/src/main/res/values/strings.xml
@@ -43,4 +43,9 @@
     <string name="transaction_details_title_payment_id">Payment ID</string>
     <string name="transaction_details_title_order_total">Order total</string>
     <string name="transaction_details_title_discount_value">Discount value</string>
+
+    <plurals name="transactions_summary_template">
+        <item quantity="one">Received %1$s promo, redeemed %2$s and saved a total of %3$s!</item>
+        <item quantity="other">Received %1$s promos, redeemed %2$s and saved a total of %3$s!</item>
+    </plurals>
 </resources>
